[package]
name = "nt-load-order-gui"
version = "0.1.0"
authors = ["Colin Finck <colin@reactos.org>"]
edition = "2021"

[dependencies]
anyhow = "1.0.95"
lazy_static = "1.5.0"
muldiv = "1.0.1"
native-windows-derive = "1.0.5"

# Pinned to 1.0.12 due to https://github.com/gabdube/native-windows-gui/issues/265
native-windows-gui = { version = "=1.0.12", default-features = false, features = ["embed-resource", "file-dialog", "flexbox", "frame", "high-dpi", "list-view"] }

nt-load-order = { path = "../nt-load-order" }
raw-cpuid = "11.3.0"
winapi = { version = "0.3.9", features = ["debug"] }

[build-dependencies]
embed-resource = "3.0.1"
