[package]
name = "nt-load-order"
version = "0.1.0"
authors = ["Colin Finck <colin@reactos.org>"]
description = "A library to determine the driver load order of a Windows system"
homepage = "https://github.com/ColinFinck/nt-load-order"
repository = "https://github.com/ColinFinck/nt-load-order"
documentation = "https://docs.rs/nt-load-order"
readme = "../README.md"
edition = "2021"
rust-version = "1.81"
license = "MIT OR Apache-2.0"
keywords = ["loadorder", "bootloader", "nt", "windows"]
categories = ["os::windows-apis"]

[dependencies]
anyhow = "1.0.95"
dlv-list = "0.6.0"
indexmap = "2.7.1"
nt-apiset = "0.1.0"
nt-hive = "0.3.0"
pelite = "0.10.0"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.55.0"
